--- a/mingw-w64-crt/lib-common/api-ms-win-crt-time-l1-1-0.def.in
+++ b/mingw-w64-crt/lib-common/api-ms-win-crt-time-l1-1-0.def.in
@@ -2,6 +2,8 @@ LIBRARY api-ms-win-crt-time-l1-1-0
 
 EXPORTS
 
+#include "func.def.in"
+
 __daylight
 __dstbias
 __timezone
@@ -12,12 +14,14 @@ _ctime64
 _ctime64_s
 _difftime32
 _difftime64
-_ftime == _ftime64
+F32(_ftime == _ftime32)
+F64(_ftime == _ftime64)
 _ftime32
 _ftime32_s
 _ftime64
 _ftime64_s
-_futime == _futime64
+F32(_futime == _futime32)
+F64(_futime == _futime64)
 _futime32
 _futime64
 _get_daylight
@@ -53,8 +57,10 @@ _timespec32_get
 _timespec64_get
 ; This is wrapped in the compat code.
 _tzset DATA
-_utime == _utime64
-utime == _utime64
+F32(_utime == _utime32)
+F64(_utime == _utime64)
+F32(utime == _utime32)
+F64(utime == _utime64)
 _utime32
 _utime64
 _W_Getdays
@@ -72,7 +78,8 @@ _wstrdate
 _wstrdate_s
 _wstrtime
 _wstrtime_s
-_wutime == _wutime64
+F32(_wutime == _wutime32)
+F64(_wutime == _wutime64)
 _wutime32
 _wutime64
 asctime
@@ -81,9 +88,15 @@ clock
 strftime
 wcsftime
 ; These functions may satisfy configure scripts.
-ctime == _ctime64
-gmtime == _gmtime64
-localtime == _localtime64
-mktime == _mktime64
-time == _time64
-timespec_get == _timespec64_get
+F32(ctime == _ctime32)
+F64(ctime == _ctime64)
+F32(gmtime == _gmtime32)
+F64(gmtime == _gmtime64)
+F32(localtime == _localtime32)
+F64(localtime == _localtime64)
+F32(mktime == _mktime32)
+F64(mktime == _mktime64)
+F32(time == _time32)
+F64(time == _time64)
+F32(timespec_get == _timespec32_get)
+F64(timespec_get == _timespec64_get)
