--- a/mingw-w64-crt/lib32/msvcrt10.def.in
+++ b/mingw-w64-crt/lib32/msvcrt10.def.in
@@ -7,6 +7,9 @@ LIBRARY "MSVCRT10.dll"
 EXPORTS
 
 #define PRE_C95_SWPRINTF
+#define FIXED_SIZE_SYMBOLS
+#define NO_WIDE_FIXED_SIZE
+#define NO_I64_FIXED_SIZE
 #define NO_STRCMPI_ALIAS
 #include "msvcrt-common.def.in"
 
@@ -974,11 +977,9 @@ _fputwchar
 _fsopen
 _fstat
 _ftime
-_ftime32 == _ftime
 _ftol
 _fullpath
 _futime
-_futime32 == _futime
 _gcvt
 _get_osfhandle
 _getch
@@ -1094,7 +1095,6 @@ _umask
 _ungetch
 _unlink
 _utime
-_utime32 == _utime
 _vsnprintf
 _vsnwprintf
 _wcsdup
@@ -1132,9 +1132,7 @@ clock
 cos
 cosh
 ctime
-_ctime32 == ctime
 difftime
-_difftime32 == difftime
 div
 exit
 exp
@@ -1170,7 +1168,6 @@ getchar
 getenv
 gets
 gmtime
-_gmtime32 == gmtime
 isalnum
 isalpha
 iscntrl
@@ -1201,7 +1198,6 @@ ldexp
 ldiv
 localeconv
 localtime
-_localtime32 == localtime
 log
 log10
 longjmp
@@ -1215,7 +1211,6 @@ memcpy
 memmove
 memset
 mktime
-_mktime32 == mktime
 modf
 perror
 pow
@@ -1268,7 +1263,6 @@ system
 tan
 tanh
 time
-_time32 == time
 tmpfile
 tmpnam
 tolower
