--- a/mingw-w64-crt/lib32/msvcrt20.def.in
+++ b/mingw-w64-crt/lib32/msvcrt20.def.in
@@ -7,6 +7,8 @@ LIBRARY "MSVCRT20.dll"
 EXPORTS
 
 #define PRE_C95_SWPRINTF
+#define FIXED_SIZE_SYMBOLS
+#define NO_I64_FIXED_SIZE
 #define NO_STRCMPI_ALIAS
 #include "msvcrt-common.def.in"
 
@@ -1010,11 +1012,9 @@ _fputwchar
 _fsopen
 _fstat
 _ftime
-_ftime32 == _ftime
 _ftol
 _fullpath
 _futime
-_futime32 == _futime
 _gcvt
 _get_osfhandle
 _getch
@@ -1255,7 +1255,6 @@ _ungetch
 _unlink
 _unloaddll
 _utime
-_utime32 == _utime
 _vsnprintf
 _vsnwprintf
 _waccess
@@ -1275,7 +1274,6 @@ _wcsrev
 _wcsset
 _wcsupr
 _wctime
-_wctime32 == _wctime
 _wexecl
 _wexecle
 _wexeclp
@@ -1327,7 +1325,6 @@ _wtoi
 _wtol
 _wunlink
 _wutime
-_wutime32 == _wutime
 _y0
 _y1
 _yn
@@ -1350,9 +1347,7 @@ clock
 cos
 cosh
 ctime
-_ctime32 == ctime
 difftime
-_difftime32 == difftime
 div
 exit
 exp
@@ -1392,7 +1387,6 @@ gets
 getwc
 getwchar
 gmtime
-_gmtime32 == gmtime
 is_wctype
 isalnum
 isalpha
@@ -1424,7 +1418,6 @@ ldexp
 ldiv
 localeconv
 localtime
-_localtime32 == localtime
 log
 log10
 longjmp
@@ -1438,7 +1431,6 @@ memcpy
 memmove
 memset
 mktime
-_mktime32 == mktime
 modf
 perror
 pow
@@ -1493,7 +1485,6 @@ system
 tan
 tanh
 time
-_time32 == time
 tmpfile
 tmpnam
 tolower
