--- a/mingw-w64-crt/lib32/msvcrt40.def.in
+++ b/mingw-w64-crt/lib32/msvcrt40.def.in
@@ -7,6 +7,7 @@ LIBRARY "MSVCRT40.dll"
 EXPORTS
 
 #define PRE_C95_SWPRINTF
+#define FIXED_SIZE_SYMBOLS
 #define NO_STRCMPI_ALIAS
 #include "msvcrt-common.def.in"
 
@@ -1133,11 +1134,9 @@ _fsopen
 _fstat
 _fstati64
 _ftime
-_ftime32 == _ftime
 _ftol
 _fullpath
 _futime
-_futime32 == _futime
 _gcvt
 _get_osfhandle
 _getch
@@ -1353,7 +1352,6 @@ _ungetch
 _unlink
 _unloaddll
 _utime
-_utime32 == _utime
 _vsnprintf
 _vsnwprintf
 _waccess
@@ -1373,7 +1371,6 @@ _wcsrev
 _wcsset
 _wcsupr
 _wctime
-_wctime32 == _wctime
 _wexecl
 _wexecle
 _wexeclp
@@ -1428,7 +1425,6 @@ _wtoi
 _wtol
 _wunlink
 _wutime
-_wutime32 == _wutime
 _y0
 _y1
 _yn
@@ -1451,9 +1447,7 @@ clock
 cos
 cosh
 ctime
-_ctime32 == ctime
 difftime
-_difftime32 == difftime
 div
 exit
 exp
@@ -1493,7 +1487,6 @@ gets
 getwc
 getwchar
 gmtime
-_gmtime32 == gmtime
 is_wctype
 isalnum
 isalpha
@@ -1525,7 +1518,6 @@ ldexp
 ldiv
 localeconv
 localtime
-_localtime32 == localtime
 log
 log10
 longjmp
@@ -1539,7 +1531,6 @@ memcpy
 memmove
 memset
 mktime
-_mktime32 == mktime
 modf
 perror
 pow
@@ -1594,7 +1585,6 @@ system
 tan
 tanh
 time
-_time32 == time
 tmpfile
 tmpnam
 tolower
