--- a/mingw-w64-crt/def-include/msvcrt-common.def.in
+++ b/mingw-w64-crt/def-include/msvcrt-common.def.in
@@ -119,6 +119,9 @@ ADD_UNDERSCORE(ungetch)
 ADD_UNDERSCORE(unlink)
 #ifndef UCRTBASE
 ADD_UNDERSCORE(utime)
+#else
+F32(utime == _utime32)
+F64(utime == _utime64)
 #endif
 ADD_UNDERSCORE(wcsdup)
 ADD_UNDERSCORE(wcsicmp)
@@ -195,6 +198,160 @@ _strtoll_l == _strtoi64_l
 _strtoull_l == _strtoui64_l
 _strtoimax_l == _strtoi64_l
 _strtoumax_l == _strtoui64_l
+#endif
+
+; This is list of find symbol aliases, every CRT library has either find symbols with SIZE suffix or without them
+#ifdef FIXED_SIZE_SYMBOLS
+F32(_findfirst32 == _findfirst)
+F64(_findfirst64i32 == _findfirst)
+#ifndef NO_I64_FIXED_SIZE
+F32(_findfirst32i64 == _findfirsti64)
+#ifndef NO_FIXED_SIZE_64_ALIAS
+F64(_findfirst64 == _findfirsti64)
+#endif
+#endif
+F32(_findnext32 == _findnext)
+F64(_findnext64i32 == _findnext)
+#ifndef NO_I64_FIXED_SIZE
+F32(_findnext32i64 == _findnexti64)
+#ifndef NO_FIXED_SIZE_64_ALIAS
+F64(_findnext64 == _findnexti64)
+#endif
+#endif
+#ifndef NO_WIDE_FIXED_SIZE
+F32(_wfindfirst32 == _wfindfirst)
+F64(_wfindfirst64i32 == _wfindfirst)
+#ifndef NO_I64_FIXED_SIZE
+F32(_wfindfirst32i64 == _wfindfirsti64)
+#ifndef NO_FIXED_SIZE_64_ALIAS
+F64(_wfindfirst64 == _wfindfirsti64)
+#endif
+#endif
+F32(_wfindnext32 == _wfindnext)
+F64(_wfindnext64i32 == _wfindnext)
+#ifndef NO_I64_FIXED_SIZE
+F32(_wfindnext32i64 == _wfindnexti64)
+#ifndef NO_FIXED_SIZE_64_ALIAS
+F64(_wfindnext64 == _wfindnexti64)
+#endif
+#endif
+#endif
+#else
+F32(_findfirst == _findfirst32)
+F64(_findfirst == _findfirst64i32)
+F32(_findfirsti64 == _findfirst32i64)
+F64(_findfirsti64 == _findfirst64)
+F32(_findnext == _findnext32)
+F64(_findnext == _findnext64i32)
+F32(_findnexti64 == _findnext32i64)
+F64(_findnexti64 == _findnext64)
+F32(_wfindfirst == _wfindfirst32)
+F64(_wfindfirst == _wfindfirst64i32)
+F32(_wfindfirsti64 == _wfindfirst32i64)
+F64(_wfindfirsti64 == _wfindfirst64)
+F32(_wfindnext == _wfindnext32)
+F64(_wfindnext == _wfindnext64i32)
+F32(_wfindnexti64 == _wfindnext32i64)
+F64(_wfindnexti64 == _wfindnext64)
+#endif
+
+; This is list of stat symbol aliases, every CRT library has either stat symbols with SIZE suffix or without them
+#ifdef FIXED_SIZE_SYMBOLS
+F32(_fstat32 == _fstat)
+F64(_fstat64i32 == _fstat)
+#ifndef NO_I64_FIXED_SIZE
+F32(_fstat32i64 == _fstati64)
+#ifndef NO_FIXED_SIZE_64_ALIAS
+F64(_fstat64 == _fstati64)
+#endif
+#endif
+F32(_stat32 == _stat)
+F64(_stat64i32 == _stat)
+#ifndef NO_I64_FIXED_SIZE
+F32(_stat32i64 == _stati64)
+#ifndef NO_FIXED_SIZE_64_ALIAS
+F64(_stat64 == _stati64)
+#endif
+#endif
+#ifndef NO_WIDE_FIXED_SIZE
+F32(_wstat32 == _wstat)
+F64(_wstat64i32 == _wstat)
+#ifndef NO_I64_FIXED_SIZE
+F32(_wstat32i64 == _wstati64)
+#ifndef NO_FIXED_SIZE_64_ALIAS
+F64(_wstat64 == _wstati64)
+#endif
+#endif
+#endif
+#else
+F32(_fstat == _fstat32)
+F64(_fstat == _fstat64i32)
+F32(_fstati64 == _fstat32i64)
+F64(_fstati64 == _fstat64)
+F32(_stat == _stat32)
+F64(_stat == _stat64i32)
+F32(_stati64 == _stat32i64)
+F64(_stati64 == _stat64)
+F32(_wstat == _wstat32)
+F64(_wstat == _wstat64i32)
+F32(_wstati64 == _wstat32i64)
+F64(_wstati64 == _wstat64)
+#endif
+
+; This is list of time symbol aliases, every CRT library except msvcrt.dll has either time symbols with SIZE suffix or without them
+#ifndef NO_TIME_ALIAS
+#ifdef FIXED_SIZE_SYMBOLS
+F32(_ctime32 == ctime)
+F64(_ctime64 == ctime)
+F32(_difftime32 == difftime)
+F64(_difftime64 == difftime)
+F32(_ftime32 == _ftime)
+F64(_ftime64 == _ftime)
+F32(_futime32 == _futime)
+F64(_futime64 == _futime)
+F32(_gmtime32 == gmtime)
+F64(_gmtime64 == gmtime)
+F32(_localtime32 == localtime)
+F64(_localtime64 == localtime)
+; Skip _mkgmtime as it is present only in msvcrt.dll
+F32(_mktime32 == mktime)
+F64(_mktime64 == mktime)
+F32(_time32 == time)
+F64(_time64 == time)
+F32(_utime32 == _utime)
+F64(_utime64 == _utime)
+#ifndef NO_WIDE_FIXED_SIZE
+F32(_wctime32 == _wctime)
+F64(_wctime64 == _wctime)
+F32(_wutime32 == _wutime)
+F64(_wutime64 == _wutime)
+#endif
+#else
+F32(ctime == _ctime32)
+F64(ctime == _ctime64)
+F32(difftime == _difftime32)
+F64(difftime == _difftime64)
+F32(_ftime == _ftime32)
+F64(_ftime == _ftime64)
+F32(_futime == _futime32)
+F64(_futime == _futime64)
+F32(gmtime == _gmtime32)
+F64(gmtime == _gmtime64)
+F32(localtime == _localtime32)
+F64(localtime == _localtime64)
+F32(_mkgmtime == _mkgmtime32)
+F64(_mkgmtime == _mkgmtime64)
+F32(mktime == _mktime32)
+F64(mktime == _mktime64)
+F32(time == _time32)
+F64(time == _time64)
+F32(_utime == _utime32)
+F64(_utime == _utime64)
+F32(_wctime == _wctime32)
+F64(_wctime == _wctime64)
+F32(_wutime == _wutime32)
+F64(_wutime == _wutime64)
+#endif
 #endif
 
 ; This is list of printf/scanf symbol aliases with __ms_ prefix
