--- a/mingw-w64-crt/lib-common/msvcr120_app.def.in
+++ b/mingw-w64-crt/lib-common/msvcr120_app.def.in
@@ -10,6 +10,7 @@ EXPORTS
 #define NO_GETPID_ALIAS
 #ifdef DEF_ARM32
 #define NO_STRCMPI_ALIAS
+#define FIXED_SIZE_SYMBOLS
 #endif
 #include "msvcrt-common.def.in"
 
@@ -1036,10 +1037,8 @@ F_ARM32(_cscanf_l)
 F_ARM32(_cscanf_s)
 F_ARM32(_cscanf_s_l)
 _ctime32
-F32(ctime == _ctime32)
 _ctime32_s
 _ctime64
-F64(ctime == _ctime64)
 _ctime64_s
 F_ARM32(_ctype)
 F_ARM32(_cwait)
@@ -1107,19 +1106,15 @@ _fileno
 _findclose
 F_ARM32(_findfirst)
 F_X86_ANY(_findfirst32)
-F_I386(_findfirst == _findfirst32)
 F_X86_ANY(_findfirst32i64)
 _findfirst64
 F_X86_ANY(_findfirst64i32)
-F_X64(_findfirst == _findfirst64i32)
 F_ARM32(_findfirsti64)
 F_ARM32(_findnext)
 F_X86_ANY(_findnext32)
-F_I386(_findnext == _findnext32)
 F_X86_ANY(_findnext32i64)
 _findnext64
 F_X86_ANY(_findnext64i32)
-F_X64(_findnext == _findnext64i32)
 F_ARM32(_findnexti64)
 _finite
 F_NON_I386(_finitef)
@@ -1156,10 +1151,6 @@ F_X86_ANY(_fstat32)
 F_X86_ANY(_fstat32i64)
 _fstat64
 F_X86_ANY(_fstat64i32)
-F_I386(_fstat == _fstat32)
-F_I386(_fstati64 == _fstat32i64)
-F_X64(_fstat == _fstat64i32)
-F_X64(_fstati64 == _fstat64)
 F_ARM32(_fstati64)
 F_X86_ANY(_ftell_nolock)
 F_X86_ANY(_ftelli64)
@@ -1169,8 +1160,6 @@ _ftime32
 _ftime32_s
 _ftime64
 _ftime64_s
-F_I386(_ftime == _ftime32)
-F_X64(_ftime == _ftime64)
 F_I386(_ftol)
 _fullpath
 F_ARM32(_fullpath_dbg)
@@ -1225,10 +1214,8 @@ F_ARM32(_getwch)
 F_ARM32(_getwche)
 _gmtime32
 _gmtime32_s
-F32(gmtime == _gmtime32)
 _gmtime64
 _gmtime64_s
-F_X64(gmtime == _gmtime64)
 F_ARM32(_heapchk)
 F_ARM32(_heapmin)
 F_ARM32(_heapwalk)
@@ -1372,11 +1359,9 @@ F_X64(_local_unwind)
 F_I386(_local_unwind2)
 F_I386(_local_unwind4)
 _localtime32
-F32(localtime == _localtime32)
 _localtime32_s
 _localtime64
 _localtime64_s
-F64(localtime == _localtime64)
 _lock
 F_X86_ANY(_lock_file)
 _locking
@@ -1667,10 +1652,6 @@ F_X86_ANY(_stat32)
 F_X86_ANY(_stat32i64)
 _stat64
 F_X86_ANY(_stat64i32)
-F_I386(_stat == _stat32)
-F_I386(_stati64 == _stat32i64)
-F_X64(_stat == _stat64i32)
-F_X64(_stati64 == _stat64)
 F_ARM32(_stati64)
 _statusfp
 F_I386(_statusfp2)
@@ -1739,8 +1720,6 @@ _tempnam
 F_ARM32(_tempnam_dbg)
 _time32
 _time64
-F32(time == _time32)
-F64(time == _time64)
 _timezone DATA
 _tolower
 _tolower_l
@@ -1885,11 +1864,9 @@ _wcsupr_s_l
 _wcsxfrm_l
 F_ARM32(_wctime)
 _wctime32
-F_I386(_wctime == _wctime32)
 _wctime32_s
 _wctime64
 _wctime64_s
-F_X64(_wctime == _wctime64)
 _wctomb_l
 _wctomb_s_l
 F_X64(_wctype DATA)
@@ -1907,19 +1884,15 @@ F_ARM32(_wexecvpe)
 _wfdopen
 F_ARM32(_wfindfirst)
 F_X86_ANY(_wfindfirst32)
-F_I386(_wfindfirst == _wfindfirst32)
 F_X86_ANY(_wfindfirst32i64)
 _wfindfirst64
 F_X86_ANY(_wfindfirst64i32)
-F_X64(_wfindfirst == _wfindfirst64i32)
 F_ARM32(_wfindfirsti64)
 F_ARM32(_wfindnext)
 F_X86_ANY(_wfindnext32)
-F_I386(_wfindnext == _wfindnext32)
 F_X86_ANY(_wfindnext32i64)
 _wfindnext64
 F_X86_ANY(_wfindnext64i32)
-F_X64(_wfindnext == _wfindnext64i32)
 F_ARM32(_wfindnexti64)
 _wfopen
 _wfopen_s
@@ -1975,12 +1948,8 @@ _wsplitpath_s
 F_ARM32(_wstat)
 F_X86_ANY(_wstat32)
 F_X86_ANY(_wstat32i64)
-F_I386(_wstat == _wstat32)
-F_I386(_wstati64 == _wstat32i64)
 _wstat64
 F_X86_ANY(_wstat64i32)
-F_X64(_wstat == _wstat64i32)
-F_X64(_wstati64 == _wstat64)
 F_ARM32(_wstati64)
 _wstrdate
 _wstrdate_s
