--- a/mingw-w64-crt/lib32/msvcr70.def.in
+++ b/mingw-w64-crt/lib32/msvcr70.def.in
@@ -7,6 +7,7 @@ LIBRARY "MSVCR70.dll"
 EXPORTS
 
 #define PRE_C95_SWPRINTF
+#define FIXED_SIZE_SYMBOLS
 #define NO_STRCMPI_ALIAS
 #define WITH_ATOLL_ALIAS
 #define WITH_STRTO64_ALIAS
@@ -353,12 +354,10 @@ _fstat
 _fstat64
 _fstati64
 _ftime
-_ftime32 == _ftime
 _ftime64
 _ftol
 _fullpath
 _futime
-_futime32 == _futime
 _futime64
 _gcvt
 _get_osfhandle
@@ -616,7 +615,6 @@ _unlink
 _unloaddll
 _unlock
 _utime
-_utime32 == _utime
 _utime64
 _vscprintf
 _vscwprintf
@@ -643,7 +641,6 @@ _wcstoi64
 _wcstoui64
 _wcsupr
 _wctime
-_wctime32 == _wctime
 _wctime64
 _wctype DATA
 _wenviron DATA
@@ -710,7 +707,6 @@ _wtoi64
 _wtol
 _wunlink
 _wutime
-_wutime32 == _wutime
 _wutime64
 _y0
 _y1
@@ -734,9 +730,7 @@ clock
 cos
 cosh
 ctime
-_ctime32 == ctime
 difftime
-_difftime32 == difftime
 div
 exit
 exp
@@ -776,7 +770,6 @@ gets
 getwc
 getwchar
 gmtime
-_gmtime32 == gmtime
 is_wctype
 isalnum
 isalpha
@@ -808,7 +801,6 @@ ldexp
 ldiv
 localeconv
 localtime
-_localtime32 == localtime
 log
 log10
 longjmp
@@ -822,7 +814,6 @@ memcpy
 memmove
 memset
 mktime
-_mktime32 == mktime
 modf
 perror
 pow
@@ -877,7 +868,6 @@ system
 tan
 tanh
 time
-_time32 == time
 tmpfile
 tmpnam
 tolower
