crt: Move DECORATED_EXPORT from msvcrt-common.def.in to func.def.in
So it can be used in any def file, not only msvcrt-based.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/def-include/func.def.in
+++ b/mingw-w64-crt/def-include/func.def.in
@@ -55,3 +55,8 @@
 #ifndef F_NON_I386
 #define F_NON_I386(x)
 #endif
+
+#if defined(DEF_I386)
+// for __cdecl and __stdcall only
+#define DECORATED_EXPORT(symbol) symbol == _ ## symbol
+#endif
