--- a/mingw-w64-crt/lib32/msvcr80.def.in
+++ b/mingw-w64-crt/lib32/msvcr80.def.in
@@ -1,12 +1,7 @@
 LIBRARY "MSVCR80.dll"
 EXPORTS
 
-#define WITH_ATOLL_ALIAS
-#define WITH_ATOLL_L_ALIAS
-#define WITH_LLABS_ALIAS
-#define WITH_STRTO64_ALIAS
-#define WITH_STRTO64_L_ALIAS
-#include "msvcrt-common.def.in"
+#include "func.def.in"
 
 ; C++ mangled symbols
 ; public: __thiscall std::__non_rtti_object::__non_rtti_object(class std::__non_rtti_object const &)
@@ -1550,3 +1545,11 @@ _aligned_offset_recalloc
 _aligned_recalloc
 _fread_nolock_s
 fread_s
+
+; Include symbol aliases for compatibility with msvcrt.dll
+#define WITH_ATOLL_ALIAS
+#define WITH_ATOLL_L_ALIAS
+#define WITH_LLABS_ALIAS
+#define WITH_STRTO64_ALIAS
+#define WITH_STRTO64_L_ALIAS
+#include "msvcrt-common.def.in"
