--- a/mingw-w64-crt/lib32/msvcr90d.def.in
+++ b/mingw-w64-crt/lib32/msvcr90d.def.in
@@ -5,14 +5,7 @@
 ;
 LIBRARY "MSVCR90D.dll"
 EXPORTS
-
-#define WITH_ATOLL_ALIAS
-#define WITH_ATOLL_L_ALIAS
-#define WITH_LLABS_ALIAS
-#define WITH_STRTO64_ALIAS
-#define WITH_STRTO64_L_ALIAS
-#include "msvcrt-common.def.in"
-
+#include "func.def.in"
 ; public: __thiscall std::__non_rtti_object::__non_rtti_object(class std::__non_rtti_object const &)
 ??0__non_rtti_object@std@@QAE@ABV01@@Z ; has WINAPI (@4)
 ; public: __thiscall std::__non_rtti_object::__non_rtti_object(char const *)
@@ -1609,3 +1602,10 @@ wprintf
 wprintf_s
 wscanf
 wscanf_s
+
+#define WITH_ATOLL_ALIAS
+#define WITH_ATOLL_L_ALIAS
+#define WITH_LLABS_ALIAS
+#define WITH_STRTO64_ALIAS
+#define WITH_STRTO64_L_ALIAS
+#include "msvcrt-common.def.in"
