crt: Fix strcmpi symbol alias for msvcr80-120 versions
msvcrt versions 8.0 - 12.0 and UCRT do not have _strcmpi symbol.

For these CRT versions (which have NO_STRCMPI_ALIAS) is later in the file
symbol _strcmpi defined as an alias to _stricmp symbol.

So for these affected CRT versions define strcmpi as an alias to _stricmp.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/def-include/msvcrt-common.def.in
+++ b/mingw-w64-crt/def-include/msvcrt-common.def.in
@@ -95,8 +95,14 @@ ADD_UNDERSCORE(spawnve)
 ADD_UNDERSCORE(spawnvp)
 ADD_UNDERSCORE(spawnvpe)
 ; ADD_UNDERSCORE(stat)
-#ifndef UCRTBASE
+#ifdef NO_STRCMPI_ALIAS
+; Symbol _strcmpi is natively present and defined in the library def file
+; So define strcmpi as an alias to _strcmpi
 ADD_UNDERSCORE(strcmpi)
+#else
+; Symbol _strcmpi is not present in the library, it provides only _stricmp symbol
+; So define strcmpi as an alias to _stricmp
+strcmpi == _stricmp
 #endif
 ADD_UNDERSCORE(strdup)
 ADD_UNDERSCORE(stricmp)
