crt: Fix utime symbol alias for msvcr80-120 versions
msvcrt versions 8.0 - 12.0 and UCRT do not have _utime symbol.

For these CRT versions (which do not have FIXED_SIZE_SYMBOLS) is later in
the file symbol _utime defined as an alias to _utime32 or _utime64 symbol.

So for these affected CRT versions define utime as an alias to _utime32 or
_utime64.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/def-include/msvcrt-common.def.in
+++ b/mingw-w64-crt/def-include/msvcrt-common.def.in
@@ -128,7 +128,7 @@ ADD_UNDERSCORE(tzset)
 ADD_UNDERSCORE(umask)
 ADD_UNDERSCORE(ungetch)
 ADD_UNDERSCORE(unlink)
-#ifndef UCRTBASE
+#ifdef FIXED_SIZE_SYMBOLS
 ADD_UNDERSCORE(utime)
 #else
 F32(utime == _utime32)
