crt: Rename msvcrt-common.def.in to crt-aliases.def.in
This file contains definitions of symbol aliases for any CRT library. It is
already used by msvcrt, crtdll and ucrt. So rename msvcrt-common.def.in to
crt-aliases.def.in as new name better match the purpose of the file.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib-common/msvcr120_app.def.in
+++ b/mingw-w64-crt/lib-common/msvcr120_app.def.in
@@ -2502,4 +2502,4 @@ wscanf_s
 #define NO_STRCMPI_ALIAS
 #define FIXED_SIZE_SYMBOLS
 #endif
-#include "msvcrt-common.def.in"
+#include "crt-aliases.def.in"
