crt: msvcrt.def.in: Fix definitions of _ctype and _mbcasemap symbols
Both symbols refers to global variable, not the function. So mark them with
DATA for all platforms. gendef detects that _mbcasemap is DATA for all I386
versions of msvcrt.dll (Visual C++ 5.0, 6.0, Win9x, 2000, XP, ... up to 10).
But gendef since Windows XP version of msvcrt.dll cannot autodetect that
_ctype is DATA symbol.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib-common/msvcrt.def.in
+++ b/mingw-w64-crt/lib-common/msvcrt.def.in
@@ -463,7 +463,7 @@ _cprintf
 _cputs
 _creat
 _cscanf
-_ctype F_I386(DATA)
+_ctype DATA
 _cwait
 _daylight DATA
 F_X86_ANY(_dstbias DATA)
@@ -1039,7 +1039,7 @@ wscanf
 ; These symbols were added in Microsoft Visual C++ 5.0 SP1 and Windows 98 First Edition OS system versions of msvcrt.dll
 ; They are not available in Microsoft Visual C++ 4.2, nor in 5.0 and neither in Windows NT 4.0 OS system version
 F_I386(__p__mbcasemap)
-_mbcasemap F_NON_I386(DATA)
+_mbcasemap DATA
 
 ; These symbols were added in Microsoft Visual C++ 6.0 and Windows 98 Second Edition OS system versions of msvcrt.dll
 F_X86_ANY(__lc_collate_cp DATA)
