--- a/mingw-w64-crt/lib-common/api-ms-win-crt-filesystem-l1-1-0.def.in
+++ b/mingw-w64-crt/lib-common/api-ms-win-crt-filesystem-l1-1-0.def.in
@@ -16,16 +16,24 @@ chmod == _chmod
 _findclose
 F32(_findfirst == _findfirst32)
 F64(_findfirst == _findfirst64i32)
+F32(_findfirsti64 == _findfirst32i64)
+F64(_findfirsti64 == _findfirst64)
 _findfirst32
 _findfirst32i64
 _findfirst64
 _findfirst64i32
 F32(_findnext == _findnext32)
 F64(_findnext == _findnext64i32)
+F32(_findnexti64 == _findnext32i64)
+F64(_findnexti64 == _findnext64)
 _findnext32
 _findnext32i64
 _findnext64
 _findnext64i32
+F32(_fstat == _fstat32)
+F64(_fstat == _fstat64i32)
+F32(_fstati64 == _fstat32i64)
+F64(_fstati64 == _fstat64)
 _fstat32
 _fstat32i64
 _fstat64
@@ -43,6 +51,10 @@ _rmdir
 rmdir == _rmdir
 _splitpath
 _splitpath_s
+F32(_stat == _stat32)
+F64(_stat == _stat64i32)
+F32(_stati64 == _stat32i64)
+F64(_stati64 == _stat64)
 _stat32
 _stat32i64
 _stat64
@@ -57,10 +69,18 @@ _waccess
 _waccess_s
 _wchdir
 _wchmod
+F32(_wfindfirst == _wfindfirst32)
+F64(_wfindfirst == _wfindfirst64i32)
+F32(_wfindfirsti64 == _wfindfirst32i64)
+F64(_wfindfirsti64 == _wfindfirst64)
 _wfindfirst32
 _wfindfirst32i64
 _wfindfirst64
 _wfindfirst64i32
+F32(_wfindnext == _wfindnext32)
+F64(_wfindnext == _wfindnext64i32)
+F32(_wfindnexti64 == _wfindnext32i64)
+F64(_wfindnexti64 == _wfindnext64)
 _wfindnext32
 _wfindnext32i64
 _wfindnext64
@@ -74,6 +94,10 @@ _wrename
 _wrmdir
 _wsplitpath
 _wsplitpath_s
+F32(_wstat == _wstat32)
+F64(_wstat == _wstat64i32)
+F32(_wstati64 == _wstat32i64)
+F64(_wstati64 == _wstat64)
 _wstat32
 _wstat32i64
 _wstat64
